Various Sonar complaints fixed, removed Planet Utilities class in favor of using Roller one throughout.
git-svn-id: https://svn.apache.org/repos/asf/roller/trunk@1512325 13f79535-47bb-0310-9956-ffa450edef68